tests/script_runtime_errors/arith_bad_shift_3/error.txt
Error: 
    3 | 42 >> a
      | ^^^^^^^ RHS value is larger than or equal to the number of bits in LHS value
